@@ -16,6 +16,7 @@ Query/Query.pm
 Query/Makefile.PL
 Query/Query/USNOA2.pm
 Query/Query/GSC.pm
+Query/Query/BSC.pm
 Query/Query/SuperCOSMOS.pm
 Query/Query/Sesame.pm
 Query/Query/SIMBAD.pm
@@ -40,4 +41,3 @@ t/4_usnoa2.t
 t/4_simbad.t
 t/4_skycat_usno.t
 t/4_skycat_gsc.t
-META.yml                                Module meta-data (added by MakeMaker)
